# examples

./: .gitmodules
01_simplest_hello/: CMakeLists.txt  targets.cmake
02_parameter_hello/: source.cpp  targets.cmake
03_subprojects_basics/: CMakeLists.txt
03_subprojects_basics/hello_with_lib/: hello_with_lib.cpp  targets.cmake
03_subprojects_basics/libhello/: targets.cmake
04_subproject_pars/hello_with_lib/: targets.cmake
04_subproject_pars/libhello/: CMakeLists.txt  targets.cmake
05_codegen/: CMakeLists.txt
05_codegen/codegen_client/: CMakeLists.txt  targets.cmake
05_codegen/lib_gen/: src.cpp.in  targets.cmake
05_codegen_known/: CMakeLists.txt
05_codegen_known/codegen_client/: CMakeLists.txt  codegen1_client.cpp  targets.cmake
jaws/: CMakeLists.txt  targets.cmake
jaws/MyProject/core/: targets.cmake
jaws/MyProject/core/src/: Constants.cpp.in
jaws/MyProject/core/test/: ConstantsTu.cpp.in
jaws/MyProject/executables/targets/: gui_example.cmake  options_example.cmake
jaws/MyProject/targets/: boost.cmake  boost_singleton.cmake  boost_test.cpp  check_configure.cmake  constants_configure.cmake  generate_export_header.cmake  generic_configure.cmake  maybe_tested.cmake  version.cmake  wxwidgets.cmake
jaws/tools/: check.cpp.in  targets.cmake
tutorial1_b/: CMakeLists.txt
tutorial2_a/: CMakeLists.txt
tutorial2_b/: CMakeLists.txt
tutorial2_b/MathFunctions/: mysqrt.cxx  targets.cmake
tutorial2_b/tutorial/: targets.cmake
tutorial2_b/version/: targets.cmake
tutorial3_a/: CMakeLists.txt
tutorial5_b/: CMakeLists.txt
(+13 files in other folders)
